Refactor of lib token emulation